manifests/o11y/tracing/jaeger-all-in-one.yaml
#   Copyright 2023 chandrawadeakash@gmail.com
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    app: jaeger
    app.kubernetes.io/component: query-ingress
    app.kubernetes.io/instance: jaeger-all-in-one
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jaeger-all-in-one-query
    app.kubernetes.io/part-of: jaeger
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: jaeger-all-in-one-query
  namespace: tracing
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: jaeger-all-in-one-query
      port:
        number: 16686
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "false"
    service.beta.openshift.io/serving-cert-secret-name: jaeger-all-in-one-collector-headless-tls
  creationTimestamp: null
  labels:
    app: jaeger
    app.kubernetes.io/component: service-collector
    app.kubernetes.io/instance: jaeger-all-in-one
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jaeger-all-in-one-collector
    app.kubernetes.io/part-of: jaeger
  name: jaeger-all-in-one-collector-headless
  namespace: tracing
spec:
  clusterIP: None
  ports:
  - name: http-zipkin
    port: 9411
    targetPort: 0
  - name: grpc-http
    port: 14250
    targetPort: 0
  - name: c-tchan-trft
    port: 14267
    targetPort: 0
  - name: http-c-binary-trft
    port: 14268
    targetPort: 0
  selector:
    app: jaeger
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jaeger-all-in-one
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jaeger-all-in-one
    app.kubernetes.io/part-of: jaeger
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jaeger
    app.kubernetes.io/component: service-collector
    app.kubernetes.io/instance: jaeger-all-in-one
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jaeger-all-in-one-collector
    app.kubernetes.io/part-of: jaeger
  name: jaeger-all-in-one-collector
  namespace: tracing
spec:
  ports:
  - name: http-zipkin
    port: 9411
    targetPort: 0
  - name: grpc-http
    port: 14250
    targetPort: 0
  - name: c-tchan-trft
    port: 14267
    targetPort: 0
  - name: http-c-binary-trft
    port: 14268
    targetPort: 0
  selector:
    app: jaeger
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jaeger-all-in-one
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jaeger-all-in-one
    app.kubernetes.io/part-of: jaeger
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jaeger
    app.kubernetes.io/component: service-query
    app.kubernetes.io/instance: jaeger-all-in-one
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jaeger-all-in-one-query
    app.kubernetes.io/part-of: jaeger
  name: jaeger-all-in-one-query
  namespace: tracing
spec:
  ports:
  - name: http-query
    port: 16686
    targetPort: 16686
  - name: grpc-query
    port: 16685
    targetPort: 16685
  selector:
    app: jaeger
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jaeger-all-in-one
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jaeger-all-in-one
    app.kubernetes.io/part-of: jaeger
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jaeger
    app.kubernetes.io/component: service-agent
    app.kubernetes.io/instance: jaeger-all-in-one
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jaeger-all-in-one-agent
    app.kubernetes.io/part-of: jaeger
  name: jaeger-all-in-one-agent
  namespace: tracing
spec:
  clusterIP: None
  ports:
  - name: zk-compact-trft
    port: 5775
    protocol: UDP
    targetPort: 0
  - name: config-rest
    port: 5778
    targetPort: 0
  - name: jg-compact-trft
    port: 6831
    protocol: UDP
    targetPort: 0
  - name: jg-binary-trft
    port: 6832
    protocol: UDP
    targetPort: 0
  selector:
    app: jaeger
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jaeger-all-in-one
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jaeger-all-in-one
    app.kubernetes.io/part-of: jaeger
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    linkerd.io/inject: disabled
    prometheus.io/port: "14269"
    prometheus.io/scrape: "true"
    sidecar.Aakash.io/inject: "false"
  creationTimestamp: null
  labels:
    app: jaeger
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jaeger-all-in-one
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jaeger-all-in-one
    app.kubernetes.io/part-of: jaeger
  name: jaeger-all-in-one
  namespace: tracing
spec:
  selector:
    matchLabels:
      app: jaeger
      app.kubernetes.io/component: all-in-one
      app.kubernetes.io/instance: jaeger-all-in-one
      app.kubernetes.io/managed-by: jaeger-operator
      app.kubernetes.io/name: jaeger-all-in-one
      app.kubernetes.io/part-of: jaeger
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        linkerd.io/inject: disabled
        prometheus.io/port: "14269"
        prometheus.io/scrape: "true"
        sidecar.Aakash.io/inject: "false"
      creationTimestamp: null
      labels:
        app: jaeger
        app.kubernetes.io/component: all-in-one
        app.kubernetes.io/instance: jaeger-all-in-one
        app.kubernetes.io/managed-by: jaeger-operator
        app.kubernetes.io/name: jaeger-all-in-one
        app.kubernetes.io/part-of: jaeger
    spec:
      containers:
      - args:
        - --sampling.strategies-file=/etc/jaeger/sampling/sampling.json
        image: jaegertracing/all-in-one:1.30.0
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 14269
          initialDelaySeconds: 5
          periodSeconds: 15
        name: jaeger
        ports:
        - containerPort: 5775
          name: zk-compact-trft
          protocol: UDP
        - containerPort: 5778
          name: config-rest
        - containerPort: 6831
          name: jg-compact-trft
          protocol: UDP
        - containerPort: 6832
          name: jg-binary-trft
          protocol: UDP
        - containerPort: 9411
          name: zipkin
        - containerPort: 14267
          name: c-tchan-trft
        - containerPort: 14268
          name: c-binary-trft
        - containerPort: 16686
          name: query
        - containerPort: 14269
          name: admin-http
        - containerPort: 14250
          name: grpc
        readinessProbe:
          httpGet:
            path: /
            port: 14269
          initialDelaySeconds: 1
        resources: {}
        volumeMounts:
        - mountPath: /etc/jaeger/sampling
          name: jaeger-all-in-one-sampling-configuration-volume
          readOnly: true
      enableServiceLinks: false
      serviceAccountName: jaeger-all-in-one
      volumes:
      - configMap:
          items:
          - key: sampling
            path: sampling.json
          name: jaeger-all-in-one-sampling-configuration
        name: jaeger-all-in-one-sampling-configuration-volume
status: {}
